testing out promoter autocomplete

--- a/app/views/promoter/profiles/_form.html.erb
+++ b/app/views/promoter/profiles/_form.html.erb
@@ -12,6 +12,7 @@
     <%= f.input :fee %>
     <%= f.input :quick_profile %>
     <%= f.input :about %>
+    <%= f.input :promoter_media %>
 
     <div class="form-actions">
         <%= f.submit nil, class: "btn btn-primary" %>
