--- a/app/views/promoter/profiles/index.html.erb
+++ b/app/views/promoter/profiles/index.html.erb
@@ -44,7 +44,9 @@
                   <img src="http://placehold.it/300x240" alt="">
                 <% end %>
               </a>
-              <h3><%= profile.try(:promoter_name) %></h3>
+              <h3>
+                <%= profile.try(:promoter_name) %>
+              </h3>
               <p><%= profile.try(:quick_profile) %>.</p>
               <p><%= button_to "View Profile", promoter_profile_path(profile), method: :get, class: "btn button-primary" %></p>
             </li>
