--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -31,3 +31,15 @@
   padding-bottom: 20px;
   padding-top: -20px;
 }
+
+.non-hero-unit p {
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 30px;
+  color: inherit;
+  padding: 10px;
+  margin-bottom: 30px;
+  display: block;
+  width: auto;
+  text-align: center;
+}
