added event association to requests

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,7 +8,7 @@
 		<% elsif @event.users.include?(current_user) %>
 			<button class="btn btn-success">Support Requested <i class="icon-check icon-white"></i></button>
 		<% elsif user_signed_in? %>
-			<%= link_to "Ask to Support", request_support_event_path(event: @event), class: "btn btn-large", method: :post %>
+			<%= link_to "Ask to Support", requests_path(event: @event), class: "btn btn-large", method: :post %>
 		<% end %>
 	</div>
 	<section id="event-info" class="section-box">
